Update baseurl in config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.xavierbriole.com"
+baseurl = "https://xavierbriole.com"
 DefaultContentLanguage = "en"
 theme = "hello-friend-ng"
 
