--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,8 @@ hugo.linux
 # Temporary lock file while building
 /.hugo_build.lock
 
+### macOS ###
+# General
+.DS_Store
+
 # End of https://www.toptal.com/developers/gitignore/api/hugo
